[project]
name = "hazGAN"
version = "2.0.2"
description = "Deep generative modelling for compound hazard sampling."
readme = "README.md"
license = { "text" = "MIT License" }
authors = [
    { name = "Alison Peard", email = "alison.peard@ouce.ox.ac.uk" },
]
maintainers = [{ name = "Alison Peard", email = "alison.peard@ouce.ox.ac.uk" }]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    # "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = []
dependencies = []

[project.urls]
Homepage = "https://github.com/alisonpeard/hazGAN"
Issues = "https://github.com/alisonpeard/hazGAN/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['hazGAN']



