[project]
name = "hazGAN"
version = "1.0.1"
description = "Simulative multivariate hazards with generative deep learning."
readme = "README.md"
license = { "text" = "MIT License" }
authors = [
    { name = "" },
]
maintainers = [{ name = "" }]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = []
dependencies = []

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['hazGAN']



